<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moving_box_hardware</name>
  <version>0.0.0</version>
  <description>Hardware interface to Moving Box.</description>
  <maintainer email="stanislav.mudriievskyi@tu-dresden.de">Stanislav Mudriievskyi</maintainer>
  <license>ToDo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>
  
  <test_depend>ament_add_gmock</test_depend>

  <test_depend>hardware_interface</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
